[gd_scene load_steps=8 format=2]

[ext_resource path="res://GUI.gd" type="Script" id=1]
[ext_resource path="res://assets/pttext36.tres" type="DynamicFont" id=2]
[ext_resource path="res://Score.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=3]
size = 22

[sub_resource type="Theme" id=4]
default_font = SubResource( 3 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.105882, 0.192157, 0.0470588, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.0352941, 0.0352941, 0.0352941, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.352941, 0.286275, 0.933333, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.0313726, 0.0313726, 0.0313726, 1 )

[node name="GUI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="Row" type="VBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 580.0
grow_horizontal = 0
mouse_filter = 2
custom_constants/separation = 1

[node name="TopRow" type="HBoxContainer" parent="MarginContainer/Row"]
margin_right = 984.0
margin_bottom = 55.0
mouse_filter = 2
size_flags_vertical = 3

[node name="Score" type="Label" parent="MarginContainer/Row/TopRow"]
margin_top = 4.0
margin_right = 112.0
margin_bottom = 51.0
rect_min_size = Vector2( 0, 10 )
theme = SubResource( 4 )
custom_fonts/font = ExtResource( 2 )
text = "Score : "
script = ExtResource( 3 )

[node name="MiddleRow" type="HBoxContainer" parent="MarginContainer/Row"]
margin_top = 56.0
margin_right = 984.0
margin_bottom = 503.0
mouse_filter = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 8.0

[node name="BottomRow" type="HBoxContainer" parent="MarginContainer/Row"]
margin_top = 504.0
margin_right = 984.0
margin_bottom = 560.0
mouse_filter = 2
size_flags_vertical = 3

[node name="HealthBar" type="ProgressBar" parent="MarginContainer/Row/BottomRow"]
margin_right = 150.0
margin_bottom = 56.0
rect_min_size = Vector2( 150, 5 )
size_flags_vertical = 1
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
value = 50.0

[node name="HealthTween" type="Tween" parent="MarginContainer/Row/BottomRow/HealthBar"]

[node name="AmmoInfo" type="HBoxContainer" parent="MarginContainer/Row/BottomRow"]
margin_left = 154.0
margin_right = 984.0
margin_bottom = 56.0
mouse_filter = 2
size_flags_horizontal = 3
alignment = 2

[node name="MaxAmmo" type="Label" parent="MarginContainer/Row/BottomRow/AmmoInfo"]
margin_left = 709.0
margin_top = 4.0
margin_right = 749.0
margin_bottom = 51.0
custom_fonts/font = ExtResource( 2 )
text = "30"

[node name="AmmoSpace" type="Label" parent="MarginContainer/Row/BottomRow/AmmoInfo"]
margin_left = 753.0
margin_top = 4.0
margin_right = 786.0
margin_bottom = 51.0
custom_fonts/font = ExtResource( 2 )
text = " / "

[node name="CurrentAmmo" type="Label" parent="MarginContainer/Row/BottomRow/AmmoInfo"]
margin_left = 790.0
margin_top = 4.0
margin_right = 830.0
margin_bottom = 51.0
custom_fonts/font = ExtResource( 2 )
text = "30"
